deploy/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: chuchu
  labels:
    app.kubernetes.io/part-of: chuchu
    app.kubernetes.io/name: app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: wss
      port: 8081
      targetPort: wss
  selector:
    app.kubernetes.io/part-of: chuchu
    app.kubernetes.io/name: app
