deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: chuchu
  labels:
    app.kubernetes.io/part-of: chuchu
    app.kubernetes.io/name: app
spec:
  ingressClassName: open-nginx
  tls:
    - hosts:
        - chuchu.onepoint.game
      secretName: chuchu-tls
  rules:
    - host: chuchu.onepoint.game
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  name: http
